Bug 1579186 - element.innerText should work with SVG text and foreignObject text r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D80376